<resources>
    <string name="app_name">Fancier Form</string>
    <string name="action_settings">Settings</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="save">Save</string>
    <string name="type">Type</string>
    <string name="take_out">Take-out</string>
    <string name="sit_down">Sit-down</string>
    <string name="delivery">Delivery</string>
</resources>
