<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="1">

    <TableRow>

        <TextView
            android:text="@string/name"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/name"
            android:hint="Enter restaurant's name" />
    </TableRow>

    <TableRow>

        <TextView
            android:text="@string/address"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/address"
            android:hint="Enter restaurant's address" />
    </TableRow>

    <TableRow>

        <TextView
            android:text="@string/type"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="20sp" />

        <RadioGroup android:id="@+id/types">

            <RadioButton
                android:id="@+id/take_out"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/take_out" />

            <RadioButton
                android:id="@+id/sit_down"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sit_down" />

            <RadioButton
                android:id="@+id/delivery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delivery" />
        </RadioGroup>
    </TableRow>

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:background="@android:color/holo_green_dark"
        android:text="@string/save"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="20sp" />
</TableLayout>
